--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@splidejs/react-splide": "^0.7.12",
     "framer-motion": "^8.1.8",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
